--- a/results.html
+++ b/results.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 </head>
 <!-- Ensure your archetypes are in fusion_ideologies.js -->
-<script type="application/javascript" src="fusion_ideologies.js"></script> 
+<script type="application/javascript" src="ideologies.js"></script> 
 
 <body>
 <h1>Fusion Party Value Alignment</h1> <!-- CHANGED -->
