--- a/quiz.html
+++ b/quiz.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<script type="application/javascript" src="questions.js"></script>
 <script type="module" src="assets/js/common.js"></script>
+<script type="module" src="questions.js"></script>
 <script type="module" src="assets/js/quiz.js"></script>
 
 <!-- Navigation -->
@@ -40,25 +40,25 @@
     </div>
     
     <div class="answer-buttons">
-        <button class="button answer-button strongly-agree" onclick="answer_question(2)">
+        <button class="button answer-button strongly-agree" data-value="2">
             <span>Strongly Agree</span>
         </button>
-        <button class="button answer-button agree" onclick="answer_question(1)">
+        <button class="button answer-button agree" data-value="1">
             <span>Agree</span>
         </button>
-        <button class="button answer-button neutral" onclick="answer_question(0)">
+        <button class="button answer-button neutral" data-value="0">
             <span>Neutral/Unsure</span>
         </button>
-        <button class="button answer-button disagree" onclick="answer_question(-1)">
+        <button class="button answer-button disagree" data-value="-1">
             <span>Disagree</span>
         </button>
-        <button class="button answer-button strongly-disagree" onclick="answer_question(-2)">
+        <button class="button answer-button strongly-disagree" data-value="-2">
             <span>Strongly Disagree</span>
         </button>
     </div>
     
     <div class="quiz-navigation">
-        <button class="small_button nav-button" onclick="prev_question()" id="back_button">← Previous</button>
+        <button class="small_button nav-button" id="back_button">← Previous</button>
         <button class="small_button_off nav-button" id="back_button_off" disabled>← Previous</button>    </div>
 </div>
 
