--- a/results.html
+++ b/results.html
@@ -73,25 +73,25 @@
         </div>
     </div>
 </div>
-    <img id="img-safety-negative" src="value_images/safety_negative.png" height="128pt"/>
+    <img id="img-safety-negative" src="value_images/safety_negative.png" alt="Safety Negative Illustration" height="128pt"/>
 </div>
 
 <!-- Section for Ethical Conduct -->
 <h2><span class="weight-300" id="value-ethics-label">Ethical Conduct</span></h2>
 <div class="axis">
-    <img id="img-ethics-positive" src="value_images/ethics_positive.png" height="128pt"/>
+    <img id="img-ethics-positive" src="value_images/ethics_positive.png" alt="Ethical Conduct Positive Illustration" height="128pt"/>
     <div class="bar ethics-positive" id="bar-ethics-positive"><div class="text-wrapper" id="ethics-positive"></div></div>
     <div class="bar ethics-negative" id="bar-ethics-negative"><div class="text-wrapper" id="ethics-negative"></div></div>
-    <img id="img-ethics-negative" src="value_images/ethics_negative.png" height="128pt"/>
+    <img id="img-ethics-negative" src="value_images/ethics_negative.png" alt="Ethical Conduct Negative Illustration" height="128pt"/>
 </div>
 
 <!-- Section for Equity -->
 <h2><span class="weight-300" id="value-equity-label">Equity</span></h2>
 <div class="axis">
-    <img id="img-equity-positive" src="value_images/equity_positive.png" height="128pt"/>
+    <img id="img-equity-positive" src="value_images/equity_positive.png" alt="Equity Positive Illustration" height="128pt"/>
     <div class="bar equity-positive" id="bar-equity-positive"><div class="text-wrapper" id="equity-positive"></div></div>
     <div class="bar equity-negative" id="bar-equity-negative"><div class="text-wrapper" id="equity-negative"></div></div>
-    <img id="img-equity-negative" src="value_images/equity_negative.png" height="128pt"/>
+    <img id="img-equity-negative" src="value_images/equity_negative.png" alt="Equity Negative Illustration" height="128pt"/>
 </div>
 
 <br><br>
