--- a/quiz.html
+++ b/quiz.html
@@ -29,14 +29,20 @@
 <div class="quiz-container">
     <div class="quiz-header">
         <h1 class="results-title">Value Alignment Assessment</h1>
-        <div class="quiz-progress">
+        <div class="quiz-progress"
+             role="progressbar"
+             id="quiz-progress-bar-container"
+             aria-label="Quiz Progress"
+             aria-valuemin="0"
+             aria-valuemax="100"
+             aria-valuenow="0">
             <div class="quiz-progress-bar" id="progress-bar" style="width: 0%;"></div>
         </div>
-        <div class="question-number" id="question-number">Loading...</div>
+        <div class="question-number" id="question-number" aria-live="polite">Loading...</div>
     </div>
     
     <div class="question-container">
-        <p class="question-text" id="question-text">Loading question...</p>
+        <p class="question-text" id="question-text" aria-live="polite">Loading question...</p>
     </div>
     
     <div class="answer-buttons">
