--- a/fullquiz.html
+++ b/fullquiz.html
@@ -172,10 +172,10 @@
         // Use more descriptive names for URL parameters if desired by the results page
         location.href = `results.html` +
             `?liberty=${normalizePillarScore(pillarScores[0])}` +
-            `&advancement=${normalizePillarScore(pillarScores[1])}` +
+            `&advance=${normalizePillarScore(pillarScores[1])}` +
             `&harmony=${normalizePillarScore(pillarScores[2])}` +
             `&safety=${normalizePillarScore(pillarScores[3])}` +
-            `ðics=${normalizePillarScore(pillarScores[4])}` +
+            `&ethics=${normalizePillarScore(pillarScores[4])}` +
             `&equity=${normalizePillarScore(pillarScores[5])}`;
     }
 </script>
